@@ -22,6 +22,7 @@ import org.apache.solr.common.SolrException.ErrorCode;
 import org.apache.solr.common.cloud.ZkConfigManager;
 import org.apache.solr.common.cloud.ZooKeeperException;
 import org.apache.solr.core.SolrResourceLoader;
+import org.apache.solr.core.SolrResourceNotFoundException;
 import org.apache.solr.schema.ZkIndexSchemaReader;
 import org.apache.zookeeper.KeeperException;
 import org.apache.zookeeper.data.Stat;
@@ -93,7 +94,7 @@ public class ZkSolrResourceLoader extends SolrResourceLoader {
       throw new IOException("Error opening " + resource, e);
     }
     if (is == null) {
-      throw new IOException("Can't find resource '" + resource
+      throw new SolrResourceNotFoundException("Can't find resource '" + resource
           + "' in classpath or '" + configSetZkPath + "', cwd="
           + System.getProperty("user.dir"));
     }
